--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,14 @@
         <h1>Vue.js Cinema</h1>
       </div>
       <div id="overview">
-        <div class="main"></div>
+        <div class="main">
+          <movie-list
+            v-bind:genres="genres"
+          ></movie-list>
+          <movie-filter
+            v-on:check-filter="checkFilter"
+          ></movie-filter>
+        </div>
       </div>
     </div>
   </body>
