feat(Module 3): completes the module

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,12 @@
       </div>
       <div id="overview">
         <div class="main">
-          <movie-list v-bind:genres="genres"></movie-list>
+          <movie-list
+            v-bind:genres="genres"
+            v-bind:movies="movies"
+            v-bind:day="day"
+            v-bind:times="times"
+          ></movie-list>
           <movie-filter v-on:check-filter="checkFilter"></movie-filter>
         </div>
       </div>
