--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         v-bind:times="times"
         v-bind:day="day"
         v-on:check-filter="checkFilter"
+        @day-selected="daySelected"
       ></router-view>
     </div>
   </body>
